@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#2388] Fix TDS7 password encoding for mssql.lua, which had been assuming
+  ASCII input even though other parts of the library had been passing it Unicode.
+
 o [GH#2402] Replace deprecated CPEs for IIS with their updated identifier,
   cpe:/a:microsoft:internet_information_services [Esa Jokinen]
 
